--- a/web/testvideo/testvideo.html
+++ b/web/testvideo/testvideo.html
@@ -15,7 +15,7 @@
                             your browser does not support the video tag
                             </video> -->
 
-<video
+<!-- <video
   id="video" 
   src="https://tokensale.udap.io/video/tokenSale.mp4" 
   controls = "true"
@@ -31,6 +31,11 @@
   x5-video-orientation="portraint" //播放器支付的方向， landscape横屏，portraint竖屏，默认值为竖屏
   style="object-fit:fill"
   >
+</video> -->
+
+
+<video src="movie.ogg" controls="controls">
+your browser does not support the video tag
 </video>
 </body>
 </html>
