--- a/web/testvideo/testvideo.html
+++ b/web/testvideo/testvideo.html
@@ -33,9 +33,10 @@
   >
 </video> -->
 
-
-<video src="movie.ogg" controls="controls">
-your browser does not support the video tag
+<video controls="controls" controls="controls">
+  <source src="movie.ogg" type="video/ogg" />
+  <source src="movie.mp4" type="video/mp4" />
+Your browser does not support the video tag.
 </video>
 </body>
 </html>
