--- a/web/testvideo/testvideo.html
+++ b/web/testvideo/testvideo.html
@@ -17,7 +17,7 @@
 
 <!-- <video
   id="video" 
-  src="https://tokensale.udap.io/video/tokenSale.mp4" 
+  src="movie.mp4" 
   controls = "true"
   poster="images.jpg" /*视频封面*/
   preload="auto" 
@@ -32,11 +32,11 @@
   style="object-fit:fill"
   >
 </video> -->
-
-<video controls="controls" controls="controls">
-  <source src="movie.ogg" type="video/ogg" />
-  <source src="movie.mp4" type="video/mp4" />
-Your browser does not support the video tag.
-</video>
+<video src="tokenSale.mp4" controls="controls">
+                            your browser does not support the video tag
+                            </video>
+<video src="movie.mp4" controls="controls">
+                        your browser does not support the video tag
+                        </video>                           
 </body>
 </html>
