--- a/web/testvideo/testvideo.html
+++ b/web/testvideo/testvideo.html
@@ -32,6 +32,10 @@
   style="object-fit:fill"
   >
 </video> -->
+<video style="width:100%; height:100%; object-fit:cover;" controls="controls" poster="video/bg.png">
+                           <source src="https://tokensale.udap.io/video/tokenSale.mp4" type="video/mp4" />
+                           Your browser does not support the video tag.
+                            </video>
 <video src="tokenSale.mp4" controls="controls">
                             your browser does not support the video tag
                             </video>
