--- a/web/testvideo/testvideo.html
+++ b/web/testvideo/testvideo.html
@@ -32,8 +32,7 @@
   style="object-fit:fill"
   >
 </video> -->
-<video style="width:100%; height:100%; object-fit:cover;" controls="controls" poster="video/bg.png">
-                           <source src="https://tokensale.udap.io/video/tokenSale.mp4" type="video/mp4" />
+<video src="https://tokensale.udap.io/video/tokenSale.mp4" style="width:100%; height:100%; object-fit:cover;" controls="controls" poster="video/bg.png">
                            Your browser does not support the video tag.
                             </video>
 <video src="tokenSale.mp4" controls="controls">
