--- a/web/testvideo/testvideo.html
+++ b/web/testvideo/testvideo.html
@@ -40,6 +40,9 @@
                             </video>
 <video src="movie.mp4" controls="controls">
                         your browser does not support the video tag
-                        </video>                           
+                        </video>   
+<video src="http://www.w3school.com.cn/i/movie.mp4" controls="controls">
+your browser does not support the video tag
+</video>                          
 </body>
 </html>
