--- a/web/testvideo/testvideo.html
+++ b/web/testvideo/testvideo.html
@@ -32,7 +32,7 @@
   style="object-fit:fill"
   >
 </video> -->
-<video src="https://tokensale.udap.io/video/tokenSale.mp4" style="width:100%; height:100%; object-fit:cover;" controls="controls" poster="video/bg.png">
+<video src="https://tokensale.udap.io/video/tokenSale.mp4" controls="controls" >
                            Your browser does not support the video tag.
                             </video>
 <video src="tokenSale.mp4" controls="controls">
