--- a/web/testvideo/testvideo.html
+++ b/web/testvideo/testvideo.html
@@ -43,6 +43,9 @@
                         </video>   
 <video src="http://www.w3school.com.cn/i/movie.mp4" controls="controls">
 your browser does not support the video tag
-</video>                          
+</video>       
+
+<input type="text" placeholder="请输入总额度" maxlength="13" oninput="this.value=(this.value.replace(/[^0-9.]+/,''))"/>
+                   
 </body>
 </html>
