--- a/web/testvideo/testvideo.html
+++ b/web/testvideo/testvideo.html
@@ -6,11 +6,11 @@
 	<script src="html5media.js"></script>
 </head>
 <body>
-	<!-- <video style="width:100%; height:100%; object-fit:cover;" controls="controls" poster="video/bg.png">
+	<video style="width:100%; height:100%; object-fit:cover;" controls="controls" poster="video/bg.png">
                            <source src="https://tokensale.udap.io/video/tokenSale.mp4" type="video/mp4" />
                            Your browser does not support the video tag.
                             </video>
- -->
+
                             <!-- <video src="https://tokensale.udap.io/video/tokenSale.mp4" controls="controls">
                             your browser does not support the video tag
                             </video> -->
@@ -44,8 +44,5 @@
 <video src="http://www.w3school.com.cn/i/movie.mp4" controls="controls">
 your browser does not support the video tag
 </video>       
-
-<input type="text" placeholder="请输入总额度" maxlength="13" oninput="this.value=(this.value.replace(/[^0-9.]+/,''))"/>
-                   
 </body>
 </html>
