--- a/web/testvideo/testvideo.html
+++ b/web/testvideo/testvideo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script src="html5media.js"></script>
+	<!-- <script src="html5media.js"></script> -->
 </head>
 <body>
 	<video style="width:100%; height:100%; object-fit:cover;" controls="controls" poster="video/bg.png">
