--- a/web/testvideo/testvideo.html
+++ b/web/testvideo/testvideo.html
@@ -15,9 +15,9 @@
                             your browser does not support the video tag
                             </video> -->
 
-<!-- <video
+<video
   id="video" 
-  src="movie.mp4" 
+  src="https://tokensale.udap.io/video/tokenSale.mp4" 
   controls = "true"
   poster="images.jpg" /*视频封面*/
   preload="auto" 
@@ -31,8 +31,8 @@
   x5-video-orientation="portraint" //播放器支付的方向， landscape横屏，portraint竖屏，默认值为竖屏
   style="object-fit:fill"
   >
-</video> -->
-<video src="https://tokensale.udap.io/video/tokenSale.mp4" controls="controls" >
+</video>
+<<!-- video src="https://tokensale.udap.io/video/tokenSale.mp4" controls="controls" >
                            Your browser does not support the video tag.
                             </video>
 <video src="tokenSale.mp4" controls="controls">
@@ -43,6 +43,6 @@
                         </video>   
 <video src="http://www.w3school.com.cn/i/movie.mp4" controls="controls">
 your browser does not support the video tag
-</video>       
+</video>    -->    
 </body>
 </html>
