--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
             </div>
             <button>smile <span class="glyphicon glyphicon-heart-empty"></span></button>
             <div class="detail row">
+				<div class="col-md-3">
+				    <div class="sixedge">React</div>
+				    <h2>单向数据流</h2>
+				    <h3>react++redux+router+webpack</h3>
+				    <span>+</span>
+				    <p>熟练掌握react。使用react制作了一个纯后台web系统和手机ap单页应，并均投入实际使用中！目前正在做的项目采用REACT+REDUX+AXIOS</p>
+				</div>
               <div class="col-md-3">
                   <div class="sixedge">PS</div>
                   <h2>页面设计</h2>
@@ -116,16 +123,11 @@
                   <span>+</span>
                   <p>通过实习一年，加工作两年，我已能够熟练编写页面代码，完成设计师的效果图，独立完成前端工作！</p>
               </div>
-              <div class="col-md-3">
-                  <div class="sixedge">React</div>
-                  <h2>单向数据流</h2>
-                  <h3>react+router+webpack</h3>
-                  <span>+</span>
-                  <p>熟练掌握react。使用react制作了一个纯后台系统和手机ap单页应，并均投入实际使用中！</p>
-              </div>
+              
             </div>
         </div>
       </section>
+	  
       <section class="works">
         <div class="title text-center">
             <img src="img/MY-WORKS.png" alt="works">
@@ -148,7 +150,22 @@
               <div class="col-md-4 col-xs-12"><img src="img/07.jpg" alt="job"></div>
               <div class="col-md-4 col-xs-12"><img src="img/04.jpg" alt="job"></div>
           </div>
+		  <div class="row item">
+		      <div class="col-md-4 col-xs-12"><img src="img/11.jpg" alt="job"></div>
+		      <div class="col-md-4 col-xs-12"><img src="img/12.jpg" alt="job"></div>
+		      <div class="col-md-4 col-xs-12"><img src="img/13.jpg" alt="job"></div>
+		  </div>
         </div>
+		<div class="title text-center">
+		    <h3>微信小程序</h3>
+		    <hr>
+		</div>
+		<div class="work container">
+		  <div class="link container">
+		      <a href="javascript:;">礼享生活坊</a>
+		      <a href="javascript:;">web礼享总管</a>
+		  </div>
+		</div>
       </section>
       <section class="links">
         <div class="title text-center">
